soak working on damage buttons

--- a/src/templates/items/armor-sheet.html
+++ b/src/templates/items/armor-sheet.html
@@ -70,7 +70,7 @@
     </div>
     <div class="flex gap-1 justify-between">
     {{/if}}
-      <div class="items-center">
+      {{!-- <div class="items-center">
         <div>
           {{localize 'swnr.armor.dr'}}:
         </div>
@@ -84,7 +84,7 @@
           data-dtype="Number"
           value="{{data.data.dr}}"
         />
-      </div>
+      </div> --}}
 
       <div>
         <div>{{localize 'swnr.armor.type.label'}}:</div>
