no dice on favorite

--- a/src/templates/actors/fragments/char/tab-combat.html
+++ b/src/templates/actors/fragments/char/tab-combat.html
@@ -6,9 +6,9 @@
             <div class="flex-shrink">
               {{zeroWidthBreaker fav.name}}
             </div>
-            <div class="flex flex-col relative items-center pt-0.5">
+            {{!-- <div class="flex flex-col relative items-center pt-0.5">
               <i class="fas fa-dice-d20"></i>
-            </div>
+            </div> --}}
         </a>
       </div>
     {{/each}}
