--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -59,7 +59,8 @@ $chatblue: #d4d5d6;
 
 .window-app .window-content {
   background-image: unset;
-  background: $chatblue;
+  color: white;
+  @apply bg-gray-700;
 }
 
 .swnr .window-content {
