wip on css clean up for consistent styling

--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -63,7 +63,7 @@ $chatblue: #d4d5d6;
   @apply bg-gray-700;
 }
 
-.swnr .window-content {
+.window-content {
   /* &,
   *:not(.far, .fa, .fas, option) {
     all: initial;
@@ -84,6 +84,12 @@ input[type="text"], input[type="number"], input[type="password"], input[type="da
 input, select, textarea {
   @apply bg-white rounded-none placeholder-gray-500 focus:shadow-none;
 }
+
+.subfield {
+  @apply bg-transparent;
+  @apply border-none;
+}
+
 :-moz-focusring {
   @apply outline-none;
 }
