--- a/src/templates/actors/fragments/char/tab-stats.html
+++ b/src/templates/actors/fragments/char/tab-stats.html
@@ -80,7 +80,7 @@
         <span><label>{{localize 'swnr.sheet.permanent-strain'}}</label>:</span>
         <div class="border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 mx-auto rounded-md">
           <input
-            class="w-8 text-right pl-1.5 py-1.5  bg-transparent placeholder-blue-800  placeholder-opacity-75 "
+            class="w-8 text-right pl-1.5 py-1.5  subfield placeholder-blue-800  placeholder-opacity-75 "
             type="number"
             min="0"
             name="data.systemStrain.permanent"
