--- a/src/templates/actors/fragments/hdr-PMH.html
+++ b/src/templates/actors/fragments/hdr-PMH.html
@@ -2,9 +2,9 @@
         <div class="power flex flex-col justify-center items-center">
           <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
             <span
-              class="inline-block text-right text-gray-300 cursor-not-allowed w-8">
+              class="inline-block text-right text-gray-300 cursor-not-allowed w-8 subfield">
               {{actor.data.data.power.value}}</span>/<input
-              class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
               type="number" name="data.power.max" value="{{actor.data.data.power.max}}" step="1" min="1"
               data-dtype="Number" />
           </div>
@@ -18,9 +18,9 @@
         <div class="mass flex flex-col justify-center items-center">
           <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
             <span
-              class="inline-block text-right text-gray-300 cursor-not-allowed w-8">
+              class="inline-block text-right text-gray-300 cursor-not-allowed w-8 subfield">
               {{actor.data.data.mass.value}}</span><span>/</span><input
-              class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
               type="number" name="data.mass.max" value="{{actor.data.data.mass.max}}" step="1" min="1"
               data-dtype="Number" />
           </div>
@@ -34,10 +34,10 @@
         <div class="hardpoints flex flex-col justify-center items-center">
           <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
             <span
-              class="inline-block text-right text-gray-300 cursor-not-allowed w-8">
+              class="inline-block text-right text-gray-300 cursor-not-allowed w-8 subfield">
               {{actor.data.data.hardpoints.value}}</span>
             <span>/</span><input
-              class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
               type="number" name="data.hardpoints.max" value="{{actor.data.data.hardpoints.max}}" step="1" min="1"
               data-dtype="Number" />
           </div>
