--- a/src/templates/actors/fragments/limited-sheet.html
+++ b/src/templates/actors/fragments/limited-sheet.html
@@ -9,7 +9,7 @@
     <div class="flex-grow items-center gap-1">
       <input
         name="name"
-        class="text-2xl  bg-transparent col-span-2 px-1.5 py-3.5 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+        class="text-2xl  subfield col-span-2 px-1.5 py-3.5 placeholder-blue-800 placeholder-opacity-75 rounded-md"
         type="text"
         value="{{actor.name}}"
         placeholder="{{localize 'swnr.sheet.name'}}"
