--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -74,10 +74,10 @@
         <div class="cargo flex flex-col justify-center items-center">
           <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
             <input
-              class="w-8 text-right pl-1.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              class="w-8 text-right pl-1.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
               type="number" step="1" name="data.cargo.value" value="{{actor.data.data.cargo.value}}" data-dtype="Number"
               min="0" /><span>/</span><input
-              class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
               type="number" name="data.cargo.max" value="{{actor.data.data.cargo.max}}" step="1" min="1"
               data-dtype="Number" />
           </div>
@@ -96,10 +96,10 @@
         <div class="fuel flex flex-col justify-center items-center">
           <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
             <input
-              class="w-8 text-right pl-1.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              class="w-8 text-right pl-1.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
               type="number" step="1" name="data.fuel.value" value="{{actor.data.data.fuel.value}}" data-dtype="Number"
               min="0" /><span>/</span><input
-              class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
               type="number" name="data.fuel.max" value="{{actor.data.data.fuel.max}}" step="1" min="1"
               data-dtype="Number" />
           </div>
@@ -113,10 +113,10 @@
         <div class="life-support flex flex-col justify-center items-center">
           <div class="w-30 border border-gray-800 bg-gray-400 mx-auto rounded-md">
             <input
-              class="w-12 text-right pl-0.5 py-1.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              class="w-12 text-right pl-0.5 py-1.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
               type="number" step="1" name="data.lifeSupportDays.value" value="{{actor.data.data.lifeSupportDays.value}}"
               data-dtype="Number" min="0" /><span>/</span><input
-              class="w-12 text-left pr-0.5 py-1.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              class="w-12 text-left pr-0.5 py-1.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
               type="number" name="data.lifeSupportDays.max" value="{{actor.data.data.lifeSupportDays.max}}" step="1"
               min="1" data-dtype="Number" />
           </div>
@@ -135,14 +135,14 @@
               <div class="flex-col justify-center text-center items-center">
                 <div class="w-36 text-center border border-gray-800 bg-gray-400 mx-auto rounded-md items-center">
                   <input
-                    class="w-8 text-center py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+                    class="w-8 text-center py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
                     type="number" step="1" name="data.crew.min" value="{{actor.data.data.crew.min}}" data-dtype="Number"
                     min="0" /><span class="w-2">/</span>
                   <input
-                    class="w-8 text-center  py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+                    class="w-8 text-center  py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
                     type="number" step="1" name="data.crew.current" value="{{actor.data.data.crew.current}}"
                     data-dtype="Number" min="0" /><span class="w-2">/</span><input
-                    class="w-12 text-center  py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+                    class="w-12 text-center  py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
                     type="number" name="data.crew.max" value="{{actor.data.data.crew.max}}" step="1" min="1"
                     data-dtype="Number" />
                 </div>
@@ -182,10 +182,10 @@
         <div class="spikeDrive flex flex-col justify-center items-center">
           <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
             <input
-              class="w-8 text-right pl-1.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              class="w-8 text-right pl-1.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
               type="number" step="1" name="data.spikeDrive.value" value="{{actor.data.data.spikeDrive.value}}"
               data-dtype="Number" min="0" /><span>/</span><input
-              class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
               type="number" name="data.spikeDrive.max" value="{{actor.data.data.spikeDrive.max}}" step="1" min="1"
               data-dtype="Number" />
           </div>
