--- a/src/templates/actors/vehicle-sheet.html
+++ b/src/templates/actors/vehicle-sheet.html
@@ -118,14 +118,14 @@
         <div class="flex-col justify-center text-center items-center">
           <div class="w-36 text-center border border-gray-800 bg-gray-400 mx-auto rounded-md items-center">
             <input
-              class="w-8 text-center py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              class="w-8 text-center py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
               type="number" step="1" name="data.crew.min" value="{{actor.data.data.crew.min}}" data-dtype="Number"
               min="0" /><span class="w-2">/</span>
             <input
-              class="w-8 text-center  py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              class="w-8 text-center  py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
               type="number" step="1" name="data.crew.current" value="{{actor.data.data.crew.current}}"
               data-dtype="Number" min="0" /><span class="w-2">/</span><input
-              class="w-12 text-center  py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              class="w-12 text-center  py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
               type="number" name="data.crew.max" value="{{actor.data.data.crew.max}}" step="1" min="1"
               data-dtype="Number" />
           </div>
