--- a/src/templates/items/weapon-sheet.html
+++ b/src/templates/items/weapon-sheet.html
@@ -186,7 +186,7 @@
           >
             <input
               type="number"
-              class="w-10 text-right bg-transparent"
+              class="w-10 text-right subfield"
               name="data.ammo.value"
               max="{{data.data.ammo.max}}"
               value="{{data.data.ammo.value}}"
@@ -197,7 +197,7 @@
             <span>/</span>
             <input
               type="number"
-              class="w-10 text-left bg-transparent"
+              class="w-10 text-left subfield"
               name="data.ammo.max"
               value="{{data.data.ammo.max}}"
               data-dtype="Number"
