--- a/src/templates/items/shipWeapon-sheet.html
+++ b/src/templates/items/shipWeapon-sheet.html
@@ -74,7 +74,7 @@
           >
             <input
               type="number"
-              class="w-10 text-right bg-transparent"
+              class="w-10 text-right subfield"
               name="data.ammo.value"
               max="{{data.data.ammo.max}}"
               value="{{data.data.ammo.value}}"
@@ -85,7 +85,7 @@
             <span>/</span>
             <input
               type="number"
-              class="w-10 text-left bg-transparent"
+              class="w-10 text-left subfield"
               name="data.ammo.max"
               value="{{data.data.ammo.max}}"
               data-dtype="Number"
