--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -69,6 +69,7 @@ $chatblue: #d4d5d6;
     all: initial;
   }
   all: initial; */
+  @apply bg-gray-700;
   @tailwind base;
   @layer base {
     color: white;
@@ -127,7 +128,7 @@ div.editor .editor-content{
   min-height: 100px;
   resize: vertical;
 }
-.window-app.swnr {
+.window-app {
   @tailwind components;
 
   @tailwind utilities;
