--- a/src/templates/actors/fragments/char/header.html
+++ b/src/templates/actors/fragments/char/header.html
@@ -31,7 +31,7 @@
         <label>{{localize 'swnr.sheet.level'}}</label>
 
         <div
-          class="gap-1 pl-1 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md flex items-center"
+          class="gap-1 pl-1 border border-gray-800 bg-gray-400  placeholder-blue-800 placeholder-opacity-75 rounded-md flex items-center"
         >
           <input
             type="number"
@@ -50,7 +50,7 @@
         <label>{{localize 'swnr.sheet.xp'}}</label>
 
         <div 
-          class="gap-1 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md flex items-center"
+          class="gap-1 border border-gray-800 bg-gray-400  placeholder-blue-800 placeholder-opacity-75 rounded-md flex items-center"
         >
           <input
             class="w-8 text-right pl-1.5 py-3.5 subfield "
@@ -81,7 +81,7 @@
         </label>
         <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md subfield">
           <input
-            class="w-8 text-right pl-1.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
+            class="w-8 text-right pl-1.5 py-3.5 bg-gray-400  placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
             type="number"
             step="1"
             name="data.health.value"
@@ -90,7 +90,7 @@
             min="0"
           /><span>/</span
           ><input
-            class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
+            class="w-8 text-left pr-1.5 py-3.5  bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
             type="number"
             name="data.health.max"
             value="{{actor.data.data.health.max}}"
@@ -107,7 +107,7 @@
         <label>{{localize 'swnr.sheet.ss'}}</label>
         <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
           <input
-            class="w-8 text-right pl-1.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
+            class="w-8 text-right pl-1.5 py-3.5 bg-gray-400  placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
             type="number"
             name="data.systemStrain.value"
             value="{{actor.data.data.systemStrain.value}}"
@@ -135,7 +135,7 @@
       <div class="ab flex flex-row justify-around items-center text-lg">
         <label>{{localize 'swnr.sheet.attack-bonus'}}</label>
         <input
-          class="w-10 text-center px-1.5 py-3.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+          class="w-10 text-center px-1.5 py-3.5 border border-gray-800 bg-gray-400  placeholder-blue-800 placeholder-opacity-75 rounded-md"
           type="number"
           step="1"
           name="data.ab"
@@ -180,7 +180,7 @@
         <label>{{localize 'swnr.sheet.movement'}}</label>
           <div class="flex w-12">
           <input
-            class="border border-r-0 border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-l-md text-right"
+            class="border border-r-0 border-gray-800 bg-gray-400  placeholder-blue-800 placeholder-opacity-75 rounded-l-md text-right"
             type="number"
             name="data.speed"
             min="0"
@@ -188,7 +188,7 @@
             value="{{actor.data.data.speed}}"
           />
           <div
-            class="border border-l-0 border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-r-md text-base pl-0.5 pr-1"
+            class="border border-l-0 border-gray-800 bg-gray-400  placeholder-blue-800 placeholder-opacity-75 rounded-r-md text-base pl-0.5 pr-1"
           >
             m
           </div>
